# cooked-pi

./: LICENSE  README.md  cooked-pi.cabal  what-is-lambda-pi.md
src/LambdaPi/: Bound.hs  Easy.hs  HOAS.hs  Unbound.hs
test/: Bound.hs  Easy.hs  HOAS.hs
