name:                cooked-pi
version:             0.1.0.0
synopsis:            What if we built the same checker a lot?
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  exposed-modules:     LambdaPi.HOAS
                     , LambdaPi.Bound
                     , LambdaPi.Unbound
                     , LambdaPi.Easy
  build-depends:       base >=4 && <5
                     , bound
                     , unbound
                     , monad-gen
                     , containers
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
