name:                cooked-pi
version:             0.1.0.0
synopsis:            What if we built the same checker a lot?
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  exposed-modules:     LambdaPi.HOAS
                     , LambdaPi.Bound
                     , LambdaPi.Easy
  build-depends:       base >=4 && <5
                     , bound
                     , monad-gen
                     , containers
                     , mtl
                     , prelude-extras
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite simple-easy
  hs-source-dirs: test
  type:               exitcode-stdio-1.0
  main-is:            Easy.hs
  hs-source-dirs:     test
  build-depends:      cooked-pi
                    , tasty
                    , tasty-hunit
                    , base > 4.0 && < 5
  default-language:    Haskell2010
Test-Suite bound
  hs-source-dirs: test
  type:               exitcode-stdio-1.0
  main-is:            Bound.hs
  hs-source-dirs:     test
  build-depends:      cooked-pi
                    , tasty
                    , tasty-hunit
                    , base > 4.0 && < 5
  default-language:    Haskell2010
Test-Suite hoas
  hs-source-dirs: test
  type:               exitcode-stdio-1.0
  main-is:            HOAS.hs
  hs-source-dirs:     test
  build-depends:      cooked-pi
                    , tasty
                    , tasty-hunit
                    , base > 4.0 && < 5
  default-language:    Haskell2010
